...
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="13dp">

            <LinearLayout
                android:id="@+id/contenedorDentroScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

...
                    android:text="@string/tipo_de_inmueble"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/desplegableTipoInmueble"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:foregroundTint="#B54141" />

                <TextView
...
                    android:text="@string/tipo_de_vivienda"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonTipoVivienda"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="#3F51B5"
                    android:text="Elegir tipo"
                    android:textColor="@color/white"
                    app:backgroundTint="#2196F3"></Button>

                <TextView
                    android:id="@+id/textPrecio"
                    android:layout_width="163dp"
...
                    android:text="@string/n_mero_de_habitaciones"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/desplegableNumHabitaciones"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/textNumeroDeBaños"
...
                    android:text="@string/n_mero_de_ba_os"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/desplegableNumBaños"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/textSuperficie"
...
                        android:layout_height="wrap_content"
                        android:text="@string/trastero" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/contenedor_botones"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonBorrarFiltros"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:backgroundTint="#DC0B0B"
                        android:text="Borrar Filtros" />

                    <Button
                        android:id="@+id/buttonAplicar"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:backgroundTint="#03A9F4"
                        android:text="Aplicar" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
