...
                <TextView
                    android:id="@+id/buscarTrobify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="TROBIFY"
                    android:textColor="#00BCD4"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <SearchView
                    android:id="@+id/buscarView"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearlayout">

            <LinearLayout
                android:id="@+id/opciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="fill"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="@id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/verMapa"
                    android:layout_width="wrap_content"
...
                    android:drawableLeft="@drawable/ic_ordenarpor"
                    android:text="Ordenar"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/filtrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_filtrar"
                    android:text="Filtrar"
                    android:textColor="#000000"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
...
                    android:layout_marginTop="5dp"
                    android:text="Inmuebles añadidos recientemente"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nResultados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="Resultados" />

...
