<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controladores.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:text="Iniciar Sesión"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:text="@string/correo_electr_nico"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextLoginEmail"
                android:layout_width="330dp"
                android:layout_height="39dp"
                android:layout_marginStart="30dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textViewPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:text="@string/contrase_a"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextLoginPassword"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonAcces"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="#03A9F4"
                android:text="Acceder" />

            <TextView
                android:id="@+id/textViewAunNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="80dp"
                android:text="@string/a_n_no_tienes_cuenta"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#3F51B5"
                android:text="@string/registrar" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>