...
    <string name="anunciante">ANUNCIANTE</string>
    <string name="pepe">PEPE</string>
    <string name="caracteristicas">CARACTERISTICAS</string>
    <string name="atras">atras</string>

    <string-array name="options_inmueble">
        <item>Cualquiera</item>
        <item>Vivienda</item>
        <item>Edificio</item>
        <item>Oficina</item>
        <item>Garaje</item>
        <item>Local</item>
        <item>Terreno</item>
        <item>Nave</item>
    </string-array>

    <string-array name="options_vivienda_por_defecto">
        <item>Apartamento</item>
        <item>Ático</item>
        <item>Dúplex</item>
        <item>Loft</item>
        <item>Planta baja</item>
        <item>Estudio</item>
        <item>Casa</item>
...
